--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "dayjs": "^1.8.28",
     "mockjs": "^1.1.0",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
