--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.28",
+    "lodash": "^4.17.15",
     "mockjs": "^1.1.0",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
